--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
