--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Error Capture for your Project" />
     <base href="/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +27,7 @@
     -->
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <title>React App</title>
+    <title>Hantry</title>
   </head>
   <body>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
